<resources>
    <string name="app_name">Constructor</string>
    <string name="learning" />
    <string name="what_am_i_learning">What am i learning..</string>
    <string name="done">Done</string>
    <string name="save_spark">Save Spark</string>
    <string name="empty_not_saved">Empty Not Saved</string>
    <string name="tag">Add Tag</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_fragment">Hello fragment</string>
    <string name="block_node">block_node</string>
    <string name="block_next">block_next</string>
    <string name="c_instruction">Think of planet\'s name and write it</string>
    <string name="c_hint">Planet name</string>
    <string name="next_step">Next</string>
    <string name="full_block_creator">Create Node</string>
    <string name="new_block">new_block</string>
    <string name="text_of_time">Komal</string>
    <string name="algorithm">Algorithm for now</string>
    <string name="pointer_icon">Pointer icon</string>
    <string name="node_icon">Node icon</string>
    <string name="function_name">Function</string>
    <string name="concept_name">Concept name</string>
    <string name="concept_description">Concept description</string>

    <!--LinkedList-->
    <string name="create_nodes">Create Nodes</string>
    <string name="operator_add">add</string>
    <string name="operator_subtract">subtract</string>
    <string name="operator_multiply">multiply</string>
    <string name="operator_divide">divide</string>
    <string name="operator_assignment">assignment</string>
    <string name="not_equal">not equal</string>
    <string name="operator_less_than">less than</string>
    <string name="operator_greater_than">greater than</string>
    <string name="begin">Begin</string>
    <string name="start">Start</string>
    <string name="undo">Undo</string>
    <string name="i_have_no_idea">I have no idea</string>
    <string name="play">Play</string>
    <string name="learn">Learn</string>
    <string name="concept_image">Concept image</string>
    <string name="arrow">arrow</string>
    <string name="function_shelf">All functions in the algorithm</string>
    <string name="mathematical_operators">Mathematical Operators</string>
    <string name="enter_word">Enter a word</string>
    <string name="enter_number">Enter a number</string>
    <string name="linked_list_how_to">By visually constructing a linked list one function at a time.</string>
    <string name="linked_list_functions">1. Create\n2. Traverse\n3. Insert\n4. Delete</string>
    <string name="linked_list_what">1. What is a linked list?</string>
    <string name="how_to_learn">2. How are we going to learn it</string>
    <string name="linked_list_all_functions">3. What are the functions of a linked list?</string>
    <string name="start_caps">TAP TO START</string>
    <string name="linked_list_def">A linked list is a linear data structure where each element is a separate object.</string>
    <string name="linked_list_complete">Well done, you have constructed a linked list.</string>
    <string name="linked_list_why">What is the point of learning about Linked List</string>
    <string name="functions_why">Why are these functions needed?</string>
    <string name="linked_list_why_answer">Linked Lists are one of the most basic data structures. It will be a part of the foundation over which you can build an understanding of Data Structures</string>
    <string name="linked_list_applications">1. Implementation of stacks and queues\n2. Image viewers, Web browsers, Music Players (Previous and next items are linked)\n3. Dynamic memory allocation</string>
    <string name="linked_list_remember">Remember what is it used for -\nTo store linear data that has no fixed size\nWhen you need to do this, hopefully a linked list will come to your head</string>
</resources>
