<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/OperatorLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.Operators">

    <!-- TODO: Update blank fragment layout -->

    <ImageButton
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_add"
        android:onClick="onClick"
        android:src="@drawable/plus"
        app:layout_constraintStart_toStartOf="@+id/multiply"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_subtract"

        android:onClick="onClick"
        android:src="@drawable/minus"
        app:layout_constraintStart_toStartOf="@+id/divide"
        app:layout_constraintTop_toTopOf="@+id/add" />

    <ImageButton
        android:id="@+id/multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_multiply"

        android:onClick="onClick"
        android:src="@drawable/multiply"
        app:layout_constraintStart_toStartOf="@+id/assignment"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <ImageButton
        android:id="@+id/divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_divide"

        android:onClick="onClick"
        android:src="@drawable/divide"
        app:layout_constraintStart_toEndOf="@+id/multiply"
        app:layout_constraintTop_toBottomOf="@+id/subtract" />

    <ImageButton
        android:id="@+id/assignment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_assignment"

        android:onClick="onClick"
        android:src="@drawable/assignment"
        app:layout_constraintStart_toStartOf="@+id/less_than"
        app:layout_constraintTop_toBottomOf="@+id/multiply" />

    <ImageButton
        android:id="@+id/not_equal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/not_equal"

        android:onClick="onClick"
        android:src="@drawable/not_equal"
        app:layout_constraintStart_toEndOf="@+id/assignment"
        app:layout_constraintTop_toBottomOf="@+id/divide" />

    <ImageButton
        android:id="@+id/less_than"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_less_than"

        android:onClick="onClick"
        android:src="@drawable/less_than"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assignment" />

    <ImageButton
        android:id="@+id/greater_than"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/operator_greater_than"

        android:onClick="onClick"
        android:src="@drawable/greater_than"
        app:layout_constraintStart_toEndOf="@+id/less_than"
        app:layout_constraintTop_toBottomOf="@+id/not_equal" />

</android.support.constraint.ConstraintLayout>