<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/concept_complete_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fdf6e3"
    tools:context=".fragments.ConceptComplete">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/linked_list_complete"
        android:textColor="#6c71c4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back_to_home"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="BACK TO HOME"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/what"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto"
        android:text="@string/linked_list_why"
        android:textColor="#586e75"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/def"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/linked_list_why_answer"
        android:textColor="#268bd2"
        app:layout_constraintStart_toStartOf="@+id/what"
        app:layout_constraintTop_toBottomOf="@+id/what" />

    <TextView
        android:id="@+id/applications"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/roboto"
        android:text="Applications of Linked List"
        android:textColor="#586e75"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/what"
        app:layout_constraintTop_toBottomOf="@+id/what" />

    <TextView
        android:id="@+id/functions_list_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/linked_list_applications"
        android:textColor="#268bd2"
        app:layout_constraintStart_toStartOf="@+id/what"
        app:layout_constraintTop_toBottomOf="@+id/applications" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="If i forget the details of a linekd list, what is the core principle that i need to remmeber?"
        android:textColor="#586e75"
        app:layout_constraintStart_toStartOf="@+id/what"
        app:layout_constraintTop_toBottomOf="@+id/functions_list_answer" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto"
        android:text="@string/linked_list_remember"
        android:textColor="#268bd2"
        app:layout_constraintStart_toStartOf="@+id/what"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


</android.support.constraint.ConstraintLayout>